[project]
name = "sleepdataspo2"
version = "0.1.0"
description = "Create meaningful features from spo2 signals from sleepdata.org"
readme = "README.md"
requires-python = ">=3.6,<3.9"  # Use <3.8 since your packages are older

authors = [
    {name = "Eshan Jayasundara", email = "eshan@ieee.org"}
]

dependencies = [
    "pyarrow==17.0.0",
    "dotenv",
    "numpy==1.21.2",
    "pandas==1.1.5",                # Last Pandas supporting Python 3.8 well
    "scikit-learn==0.22.2",
    "scipy==1.4.1",
    "lempel-ziv-complexity==0.2.2",
    "pobm==1.2.0",                  # Assuming compatible version available
    "matplotlib==3.5.3",            # Matches numpy 1.18 and Python 3.8 compatibility
    "seaborn==0.10.1",              # Compatible with matplotlib 3.1.x and pandas 1.1.x
    "mne==1.3.0",                    # Older MNE compatible with Python 3.8
    "filelock==3.16.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
